--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
+    "columnify": "^1.5.4",
+    "moment": "^2.22.2",
     "puppeteer": "^1.8.0"
   }
 }
